feat: added history rest api
